# davy

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: authentication.rs  config.rs  main.rs  server.rs
src/commands/: encrypt_password.rs  mod.rs  start_server.rs
